Modified the  height of the second-nav-container, to avoid overflowing on the main view point.

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ body {
 
 .second-nav-container{
     background-color: darkgrey;
-    height: 69vh;
+    height: 65vh;
     width: 780px;
     border-top-right-radius: 10px;
 }
